@@ -1,3 +1,4 @@
+211101 auto propagation: gpu value propagation
 211031 auto propagation: shrunk graph building alg fix
 211027 auto propagation: issue: value propagation slow
 211025 auto propagation: issue: obs to multiple graph nodes
